@@ -1,21 +1,21 @@
 package io.kestra.storage.local;
 
+import io.kestra.core.storages.FileAttributes;
 import io.kestra.core.storages.StorageInterface;
-import org.apache.commons.lang3.tuple.Pair;
+import jakarta.inject.Inject;
+import jakarta.inject.Singleton;
+import org.apache.commons.io.FileUtils;
 
 import java.io.*;
 import java.net.URI;
-import java.nio.file.Files;
-import java.nio.file.NoSuchFileException;
-import java.nio.file.Path;
-import java.nio.file.Paths;
+import java.nio.file.*;
+import java.nio.file.attribute.BasicFileAttributes;
 import java.nio.file.attribute.FileTime;
 import java.util.Comparator;
 import java.util.List;
-import java.util.stream.Collectors;
 import java.util.stream.Stream;
-import jakarta.inject.Inject;
-import jakarta.inject.Singleton;
+
+import static io.kestra.core.utils.Rethrow.throwFunction;
 
 @Singleton
 @LocalStorageEnabled
@@ -32,24 +32,19 @@ public class LocalStorage implements StorageInterface {
     }
 
     private Path getPath(String tenantId, URI uri) {
-        return tenantId == null ? Paths.get(config.getBasePath().toAbsolutePath().toString(), uri.toString())
-            : Paths.get(config.getBasePath().toAbsolutePath().toString(), tenantId, uri.toString());
-    }
-
-    private void createDirectory(String tenantId, URI append) {
-        Path path = getPath(tenantId, append);
-        File directory = path.getParent().toFile();
-
-        if (!directory.exists()) {
-            if (!directory.mkdirs()) {
-                throw new RuntimeException("Cannot create directory: " + directory.getAbsolutePath());
-            }
+        Path basePath = tenantId == null ? config.getBasePath().toAbsolutePath()
+            : Paths.get(config.getBasePath().toAbsolutePath().toString(), tenantId);
+        if(uri == null) {
+            return basePath;
         }
+
+        parentTraversalGuard(uri);
+        return Paths.get(basePath.toString(), uri.getPath());
     }
 
     @Override
     public InputStream get(String tenantId, URI uri) throws IOException {
-        return new BufferedInputStream(new FileInputStream(getPath(tenantId, URI.create(uri.getPath()))
+        return new BufferedInputStream(new FileInputStream(getPath(tenantId, uri)
             .toAbsolutePath()
             .toString())
         );
@@ -61,9 +56,27 @@ public class LocalStorage implements StorageInterface {
     }
 
     @Override
+    public List<FileAttributes> list(String tenantId, URI uri) throws IOException {
+        try (Stream<Path> stream = Files.list(getPath(tenantId, uri))) {
+            return stream
+                .map(throwFunction(file -> {
+                    URI relative = URI.create(
+                        getPath(tenantId, null).relativize(
+                            Path.of(file.toUri())
+                        ).toString()
+                    );
+                    return getAttributes(tenantId, relative);
+                }))
+                .toList();
+        } catch (NoSuchFileException e) {
+            throw new FileNotFoundException(e.getMessage());
+        }
+    }
+
+    @Override
     public Long size(String tenantId, URI uri) throws IOException {
         try {
-            return Files.size(getPath(tenantId, URI.create(uri.getPath())));
+            return Files.size(getPath(tenantId, uri));
         } catch (NoSuchFileException e) {
             throw new FileNotFoundException("Unable to find file at '" + uri + "'");
         } catch (IOException e) {
@@ -73,33 +86,82 @@ public class LocalStorage implements StorageInterface {
 
     @Override
     public Long lastModifiedTime(String tenantId, URI uri) throws IOException {
-        FileTime lastModifiedTime = Files.getLastModifiedTime(getPath(tenantId, uri));
+        FileTime lastModifiedTime;
+        try {
+            lastModifiedTime = Files.getLastModifiedTime(getPath(tenantId, uri));
+        } catch (NoSuchFileException e) {
+            throw new FileNotFoundException(e.getMessage());
+        }
         return lastModifiedTime.toMillis();
     }
 
     @Override
     public URI put(String tenantId, URI uri, InputStream data) throws IOException {
-        this.createDirectory(tenantId, uri);
+        File file = getPath(tenantId, uri).toFile();
+        File parent = file.getParentFile();
+        if (!parent.exists() && !parent.mkdirs()) {
+            throw new RuntimeException("Cannot create directory: " + parent.getAbsolutePath());
+        }
 
-        try (data; OutputStream outStream = new FileOutputStream(getPath(tenantId, uri).toFile())) {
+        try (data; OutputStream outStream = new FileOutputStream(file)) {
             byte[] buffer = new byte[8 * 1024];
             int bytesRead;
             while ((bytesRead = data.read(buffer)) != -1) {
                 outStream.write(buffer, 0, bytesRead);
             }
         }
-
         return URI.create("kestra://" + uri.getPath());
     }
 
     @Override
+    public FileAttributes getAttributes(String tenantId, URI uri) throws IOException {
+        Path path = getPath(tenantId, uri);
+        try {
+            return LocalFileAttributes.builder()
+                .fileName(path.getFileName().toString())
+                .basicFileAttributes(Files.readAttributes(path, BasicFileAttributes.class))
+                .build();
+        } catch (NoSuchFileException e) {
+            throw new FileNotFoundException(e.getMessage());
+        }
+    }
+
+    @Override
+    public URI createDirectory(String tenantId, URI uri) {
+        if (uri == null || uri.getPath().isEmpty()) {
+            throw new IllegalArgumentException("Unable to create a directory with empty url.");
+        }
+        File file = getPath(tenantId, uri).toFile();
+        if (!file.exists() && !file.mkdirs()) {
+            throw new RuntimeException("Cannot create directory: " + file.getAbsolutePath());
+        }
+        return URI.create("kestra://" + uri.getPath());
+    }
+
+    @Override
+    public URI move(String tenantId, URI from, URI to) throws IOException {
+        try {
+            Files.move(
+                getPath(tenantId, from),
+                getPath(tenantId, to),
+                StandardCopyOption.ATOMIC_MOVE);
+        } catch (NoSuchFileException e) {
+            throw new FileNotFoundException(e.getMessage());
+        }
+        return URI.create("kestra://" + to.getPath());
+    }
+
+    @Override
     public boolean delete(String tenantId, URI uri) throws IOException {
-        File file = getPath(tenantId, URI.create(uri.getPath())).toFile();
-        if (!file.exists()) {
-            return false;
+        Path path = getPath(tenantId, uri);
+        File file = path.toFile();
+
+        if (file.isDirectory()) {
+            FileUtils.deleteDirectory(file);
+            return true;
         }
 
-        return file.delete();
+        return Files.deleteIfExists(path);
     }
 
     @SuppressWarnings("ResultOfMethodCallIgnored")
@@ -113,11 +175,23 @@ public class LocalStorage implements StorageInterface {
 
         try (Stream<Path> walk = Files.walk(path)) {
             return walk.sorted(Comparator.reverseOrder())
-                .map(r -> Pair.of(r.toFile(), r.toFile().isFile()))
-                .peek(r -> r.getLeft().delete())
-                .filter(Pair::getRight)
-                .map(r -> URI.create("kestra://" + r.getLeft().toURI().getPath().substring(config.getBasePath().toAbsolutePath().toString().length())))
-                .collect(Collectors.toList());
+                .map(Path::toFile)
+                .peek(File::delete)
+                .map(r -> getKestraUri(tenantId, r.toPath()))
+                .toList();
+        }
+    }
+
+    private URI getKestraUri(String tenantId, Path path) {
+        Path prefix = (tenantId == null) ?
+            config.getBasePath().toAbsolutePath() :
+            Path.of(config.getBasePath().toAbsolutePath().toString(), tenantId);
+        return URI.create("kestra:///" + prefix.relativize(path));
+    }
+
+    private void parentTraversalGuard(URI uri) {
+        if (uri.toString().contains("..")) {
+            throw new IllegalArgumentException("File should be accessed with their full path and not using relative '..' path.");
         }
     }
 }
